Fix displaying cancelled orders on the storefront

--- a/storefront/config/i18n-tasks.yml
+++ b/storefront/config/i18n-tasks.yml
@@ -143,12 +143,9 @@ search:
 # - '{devise,simple_form}.*'
 
 ## Consider these keys used:
-# ignore_unused:
-# - 'activerecord.attributes.*'
-# - '{devise,kaminari,will_paginate}.*'
-# - 'simple_form.{yes,no}'
-# - 'simple_form.{placeholders,hints,labels}.*'
-# - 'simple_form.{error_notification,required}.:'
+ignore_unused:
+- 'spree.storefront.refund_action_not_required_message.*'
+- 'spree.storefront.refund_action_required_message.*'
 
 ## Exclude these keys from the `i18n-tasks eq-base' report:
 # ignore_eq_base:
