--- a/docs/api-reference/storefront.yaml
+++ b/docs/api-reference/storefront.yaml
@@ -3213,9 +3213,6 @@ components:
             cvv_response_message:
               type: string
               default: authorized
-            payment_method_id:
-              type: integer
-              default: 1
             payment_method_name:
               type: string
               default: Credit Card
@@ -3797,10 +3794,6 @@ components:
               type: string
               example: '0.0'
               description: Eligible tax for service (if any)
-            shipping_method_id:
-              type: integer
-              example: 1
-              description: ID of a Shipping Method. You will need this for the Checkout Update action
             final_price:
               type: string
               example: '10.0'
@@ -3818,10 +3811,20 @@ components:
               type: boolean
               example: true
               description: 'Indicates if the Shipping Rate is free, eg. when Free shipping promo applied to Cart'
+        relationships:
+          type: object
+          properties:
+            shipping_method:
+              type: object
+              description: Shipping method for which this shipping rate belongs to
+              properties:
+                data:
+                  $ref: '#/components/schemas/Relation'
       required:
         - id
         - type
         - attributes
+        - relationships
     StockLocation:
       title: Stock Location
       type: object
@@ -4640,7 +4643,7 @@ components:
     SparseFieldsShippingRate:
       in: query
       name: 'fields[shipping_rate]'
-      example: 'name,selected,final_price,display_final_price,cost,display_cost,tax_amount,display_tax_amount,shipping_method_id'
+      example: 'name,selected,final_price,display_final_price,cost,display_cost,tax_amount,display_tax_amount'
       description: 'Specify the fields you would like returned in the response body. [More information](https://jsonapi.org/format/#fetching-sparse-fieldsets).'
       schema:
         type: string
@@ -5186,7 +5189,6 @@ components:
                       number: PN43O2GK
                       cvv_response_code: null
                       cvv_response_message: null
-                      payment_method_id: 2
                       payment_method_name: Check
                       state: completed
                     relationships:
@@ -5596,7 +5598,6 @@ components:
                       number: PN43O2GK
                       cvv_response_code: null
                       cvv_response_message: null
-                      payment_method_id: 2
                       payment_method_name: Check
                       state: completed
                     relationships:
@@ -15957,8 +15958,12 @@ components:
                       display_cost: $5.00
                       tax_amount: '0.0'
                       display_tax_amount: $0.00
-                      shipping_method_id: 1
                       free: false
+                    relationships:
+                      shipping_method:
+                        data:
+                          id: "1"
+                          type: shipping_method
                   - id: '11'
                     type: shipping_rate
                     attributes:
@@ -15970,8 +15975,12 @@ components:
                       display_cost: $10.00
                       tax_amount: '0.0'
                       display_tax_amount: $0.00
-                      shipping_method_id: 2
                       free: false
+                    relationships:
+                      shipping_method:
+                        data:
+                          id: "2"
+                          type: "shipping_method"
                   - id: '12'
                     type: shipping_rate
                     attributes:
@@ -15983,8 +15992,12 @@ components:
                       display_cost: $15.00
                       tax_amount: '0.0'
                       display_tax_amount: $0.00
-                      shipping_method_id: 3
                       free: false
+                    relationships:
+                      shipping_method:
+                        data:
+                          id: "3"
+                          type: shipping_method
                   - id: '1'
                     type: stock_location
                     attributes:
@@ -16013,12 +16026,16 @@ components:
                       selected: true
                       cost: '5.0'
                       tax_amount: '0.0'
-                      shipping_method_id: 1
                       final_price: '5.0'
                       display_cost: $5.00
                       display_final_price: $5.00
                       display_tax_amount: $0.00
                       free: false
+                    relationships:
+                      shipping_method:
+                        data:
+                          type: shipping_method
+                          id: "1"
                   - id: null
                     type: shipping_rate
                     attributes:
@@ -16026,12 +16043,16 @@ components:
                       selected: false
                       cost: '10.0'
                       tax_amount: '0.0'
-                      shipping_method_id: 2
                       final_price: '10.0'
                       display_cost: $10.00
                       display_final_price: $10.00
                       display_tax_amount: $0.00
                       free: false
+                    relationships:
+                      shipping_method:
+                        data:
+                          id: "2"
+                          type: shipping_method
                   - id: null
                     type: shipping_rate
                     attributes:
@@ -16039,12 +16060,16 @@ components:
                       selected: false
                       cost: '15.0'
                       tax_amount: '0.0'
-                      shipping_method_id: 3
                       final_price: '15.0'
                       display_cost: $15.00
                       display_final_price: $15.00
                       display_tax_amount: $0.00
                       free: false
+                    relationships:
+                      shipping_method:
+                        data:
+                          id: "3"
+                          type: shipping_method
     Menu:
       description: 200 Success - Returns the `menu` object.
       content:
