Fix MySQL build (#12528)
* Test against MySQL on CI

* Update config.yml

* Fix db samples for MySQL

* Fix db samples for MySQL

* Update user.rb

* fix any non-mysql compatibile code

* Fix meteadata specs

* Fix specs for mailers and return authorizations

* Correct api specs

---------

Co-authored-by: Łukasz Adamczyk <lukas.adamczyk@getvendo.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,55 +7,34 @@ defaults: &defaults
     BUNDLE_JOBS: 4
     BUNDLE_RETRY: 3
     BUNDLE_PATH: ~/spree/vendor/bundle
-    DB: postgres # default value, this will speed up bundle install for all postgres builds
     DB_HOST: localhost
+    DB: postgres # default value, this will speed up bundle install for all postgres builds
     DB_USERNAME: postgres
   working_directory: ~/spree
   docker:
     - image: &ruby_image cimg/ruby:3.3.0-browsers
 
-jobs:
-  build:
-    <<: *defaults
+commands:
+  bundle_install:
     steps:
-      - checkout
       - restore_cache:
           keys:
             - spree-bundle-v10-ruby-{{ checksum ".ruby-version" }}-{{ .Branch }}
             - spree-bundle-v10-ruby-{{ checksum ".ruby-version" }}
-      - run:
-          name: Install libvips
-          command: sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 32EE5355A6BC6E42 && sudo apt-get update && sudo apt-get install libvips42
+      - install_libvips
       - run:
           name: Install global dependencies
           command: bundle check || bundle install
       - run:
           name: Install per-project gem dependencies
           command: bin/build-ci.rb install
-      - save_cache:
-          key: spree-bundle-v10-ruby-{{ checksum ".ruby-version" }}-{{ .Branch }}
-          paths:
-            - ~/spree/vendor/bundle
-
-  run_test: &run_test
-    <<: *defaults
-    steps: &default_steps
-      - checkout
-      - attach_workspace:
-          at: /tmp
-      - restore_cache:
-          keys:
-            - spree-bundle-v10-ruby-{{ checksum ".ruby-version" }}-{{ .Branch }}
-            - spree-bundle-v10-ruby-{{ checksum ".ruby-version" }}
+  install_libvips:
+    steps:
       - run:
           name: Install libvips
           command: sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 32EE5355A6BC6E42 && sudo apt-get update && sudo apt-get install libvips42
-      - run:
-          name: Ensure gems are installed
-          command: bin/build-ci.rb install
-      - run:
-          name: Run tests
-          command: bin/build-ci.rb test
+  store_all_artifacts:
+    steps:
       - store_artifacts:
           path: /tmp/test-artifacts
           destination: test-artifacts
@@ -67,85 +46,146 @@ jobs:
           destination: raw-test-output
       - store_test_results:
           path: /tmp/test-results
-
-  tests_core: &tests_core
-    <<: *run_test
+jobs:
+  build:
+    <<: *defaults
+    steps:
+      - checkout
+      - bundle_install
+      - save_cache:
+          key: spree-bundle-v10-ruby-{{ checksum ".ruby-version" }}-{{ .Branch }}
+          paths:
+            - ~/spree/vendor/bundle
+  test: &test
+    <<: *defaults
     docker:
       - image: *ruby_image
       - image: cimg/postgres:16.2
         environment:
           POSTGRES_USER: postgres
+    steps: &default_steps
+      - checkout
+      - attach_workspace:
+          at: /tmp
+      - install_libvips
+      - bundle_install
+      - run:
+          name: Run tests
+          command: bin/build-ci.rb test
+      - store_all_artifacts
+
+  test_mysql: &test_mysql
+    <<: *test
+    docker:
+      - image: *ruby_image
+      - image: cimg/mysql:8.0
+        command: [--default-authentication-plugin=mysql_native_password]
+        environment:
+          MYSQL_ROOT_PASSWORD: password
+    environment: &mysql_environment
+      <<: *environment
+      DB: mysql
+      DB_USERNAME: root
+      DB_PASSWORD: password
+      DB_HOST: 127.0.0.1
+
+  # postgres tests
+  test_core_postgres:
+    <<: *test
     parallelism: 6
     environment:
       <<: *environment
       PROJECTS: core
-
-  tests_api: &tests_api
-    <<: *run_test
+  test_api_postgres:
+    <<: *test
     parallelism: 4
-    docker:
-      - image: *ruby_image
-      - image: cimg/postgres:16.2
-        environment:
-          POSTGRES_USER: postgres
     environment:
       <<: *environment
       PROJECTS: api
-
-  tests_admin: &tests_admin
-    <<: *run_test
-    docker:
-      - image: *ruby_image
-      - image: cimg/postgres:16.2
-        environment:
-          POSTGRES_USER: postgres
+  test_admin_postgres:
+    <<: *test
     environment:
       <<: *environment
       PROJECTS: admin
-
-  tests_storefront: &tests_storefront
-    <<: *run_test
-    docker:
-      - image: *ruby_image
-      - image: cimg/postgres:16.2
-        environment:
-          POSTGRES_USER: postgres
+  test_storefront_postgres:
+    <<: *test
     environment:
       <<: *environment
       PROJECTS: storefront
-
-  tests_other: &tests_other
-    <<: *run_test
-    docker:
-      - image: *ruby_image
-      - image: cimg/postgres:16.2
-        environment:
-          POSTGRES_USER: postgres
+  test_other_postgres:
+    <<: *test
     environment:
       <<: *environment
       PROJECTS: emails,sample
 
+  # mysql tests
+  test_core_mysql:
+    <<: *test_mysql
+    parallelism: 6
+    environment:
+      <<: *mysql_environment
+      PROJECTS: core
+  test_api_mysql:
+    <<: *test_mysql
+    parallelism: 4
+    environment:
+      <<: *mysql_environment
+      PROJECTS: api
+  test_admin_mysql:
+    <<: *test_mysql
+    environment:
+      <<: *mysql_environment
+      PROJECTS: admin
+  test_storefront_mysql:
+    <<: *test_mysql
+    environment:
+      <<: *mysql_environment
+      PROJECTS: storefront
+  test_other_mysql:
+    <<: *test_mysql
+    environment:
+      <<: *mysql_environment
+      PROJECTS: emails,sample
+      
 workflows:
   main:
     jobs:
       - build
-      - tests_core:
-          name: tests_rails_postgres_core
+      # postgres tests
+      - test_core_postgres:
           requires:
             - build
-      - tests_api:
-          name: tests_rails_postgres_api
+      - test_api_postgres:
           requires:
             - build
-      - tests_admin:
-          name: tests_rails_postgres_admin
+      - test_admin_postgres:
           requires:
             - build
-      - tests_storefront:
-          name: tests_rails_postgres_storefront
+      - test_storefront_postgres:
           requires:
             - build
-      - tests_other:
-          name: tests_rails_postgres_other
+      - test_other_postgres:
           requires:
             - build
+
+      # mysql tests
+      - test_core_mysql:
+          requires:
+            - build
+            - test_core_postgres
+      - test_api_mysql:
+          requires:
+            - build
+            - test_api_postgres
+      - test_admin_mysql:
+          requires:
+            - build
+            - test_admin_postgres
+      - test_storefront_mysql:
+          requires:
+            - build
+            - test_storefront_postgres
+      - test_other_mysql:
+          requires:
+            - build
+            - test_other_postgres
