--- a/docs/api-reference/storefront.yaml
+++ b/docs/api-reference/storefront.yaml
@@ -1591,7 +1591,7 @@ paths:
         - orderToken: []
     patch:
       summary: Updates Stripe Payment Intent
-      description: Updates the payment intent with new `amount` and `payment_method_id`
+      description: Updates the payment intent with new `amount` and `stripe_payment_method_id`
       tags:
         - Stripe
       operationId: update-stripe-payment-intent
