Add port evn to circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ defaults: &defaults
     DB_HOST: localhost
     DB: postgres # default value, this will speed up bundle install for all postgres builds
     DB_USERNAME: postgres
+    PORT: 3000
   working_directory: ~/spree
   docker:
     - image: &ruby_image cimg/ruby:3.3.0-browsers
@@ -146,7 +147,7 @@ jobs:
     environment:
       <<: *mysql_environment
       PROJECTS: emails,sample
-      
+
 workflows:
   main:
     jobs:
