--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,7 @@ jobs:
       DB_USERNAME: root
       DB_PASSWORD: password
       DB_HOST: 127.0.0.1
+      RAILS_VERSION: 7.2.0
 
   # postgres tests
   test_core_postgres:
